infra/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fulfillment-api
spec:
  selector:
    app.kubernetes.io/name: fulfillment-api
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
